Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120397

"output" property seems to be missing in WaylandQuickItem QML type documentation

XMLWordPrintable

    • bf3470703 (dev), 68b80faec (6.7), 19b49ee41 (6.6), ba3b1019e (tqtc/lts-6.5), 628de33b0 (tqtc/lts-6.2)
    • DaVinci 93

      For Gerrit Dashboard: QTBUG-120397
      # Subject Branch Project Status CR V

          andreas.eliasson Andreas Eliasson
          mikio_hirai Mikio Hirai
          Votes:
          0 Vote for this issue
          Watchers:
          2 Start watching this issue

            Created:
            Updated:
            Resolved: