Doc: Add documentation for QML WaylandQuickItem::output property

Fixes: QTBUG-120397
Pick-to: 6.5 6.2
Change-Id: I52dee0bf480dee26ca71f7a914150be9679f87f3
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
(cherry picked from commit bf3470703b437ce88903caeba02b9fdd8b9c99d4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 68b80faec6c08b5f1b6acee7ccaa5545e57344de)